--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.wraper{
+	margin: 0 auto;
+	padding: 20px;
+	width: 600px;
+}
